# assimp_benchmarks

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
